syntax = "proto3";

package Blog;

message Blog {
  int32 id = 1;
  int32 auth_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest{
	Blog blog = 1;
}

message CreateBlogResponse{
	Blog blog = 1;
}

message ListBlogRequest{

}

message ListBlogResponse{
	Blog blog = 1;
}

service BlogService {
	rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse){}
	rpc ListBlogs (ListBlogRequest) returns (stream ListBlogResponse){}
}
